# efr32_trace_playground

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/minimal_orbstat/: CMakeLists.txt  add.c  itm_trace_function.c  main.c
src/minimal_orbtop/: CMakeLists.txt  add.c  add.h  main.c
src/minimal_swo/: CMakeLists.txt  main.c
